--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
    "scripts": {
       "dev": "nodemon server.js",
       "start": "node server.js",
+      "stripe listen": "--forward-to https://mern-e-commerce-production.up.railway.app/payment-webhook",
       "test": "echo \"Error: no test specified\" && exit 1"
    },
    "keywords": [],
@@ -21,6 +22,7 @@
       "helmet": "^7.0.0",
       "jsonwebtoken": "^9.0.1",
       "mongoose": "^7.4.1",
-      "nodemailer": "^6.9.4"
+      "nodemailer": "^6.9.4",
+      "stripe": "^13.5.0"
    }
 }
