--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
    "scripts": {
       "dev": "nodemon server.js",
       "start": "node server.js",
-      "stripe listen": "--forward-to https://mern-e-commerce-production.up.railway.app/payment-webhook",
+      "stripe listen": "--forward-to https://mern-e-commerce-production.up.railway.app/users/payment-webhook",
       "test": "echo \"Error: no test specified\" && exit 1"
    },
    "keywords": [],
