--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@splidejs/react-splide": "^0.7.12",
     "@tanstack/react-query": "^4.32.0",
     "axios": "^1.4.0",
+    "firebase": "^10.5.0",
     "jwt-decode": "^3.1.2",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
